modules/v2.7.1/image-update.md
---
module_id: image-update
module_name: 图片更新任务
version: 2.7.1
status: draft
owner: _待填写_
last_updated: '2026-07-02'
depends_on:
- module: style-management
  type: hard
  use_case: 需要引用款式和SPU数据
- module: supplier-management
  type: soft
  use_case: 需要供应商信息
- module: spot-goods
  type: hard
  use_case: 需要库存数据
exposed_api: []
related_features: []
---

# 图片更新任务

## 1. 模块概述

本模块负责图片更新任务相关功能，涵盖**上传图片 → 创建修图任务 → 审核更新结果**完整链路。共 8 个页面。

**核心业务流程**：

```mermaid
flowchart TD
    A[发起图片/视频更新] --> B[输入SPU号查询款式]
    B --> C[创建修图任务]
    C --> D[上传图片/视频]
    D --> E[提交更新]
    E --> F{审核}
    F -->|通过| G[更新完成]
    F -->|不通过| H[返修]
    H --> D
```

**对接关系**：

| 对接系统 | 方向 | 数据/功能 | 说明 |
|---------|------|---------|------|
| 款式管理 | 输入 | SPU/款式数据、营销图 | 发起更新时查询款式信息 |
| 现货管理 | 输入 | SKC数据、商品图 | 发起更新时查询现货信息 |

---

## 2. 页面概述

| 页面名称 | 页面类型 | 入口/路径 | 交互形式 | 说明 |
|---------|---------|---------|---------|------|
| 图片更新任务列表 | 列表页 | 设计中心 → 图片更新任务 | 页面跳转 | 任务列表主页面，含状态筛选 + 搜索 |
| 发起图片/视频更新 | 表单页 | 列表页 → 点击「创建任务」 | 新标签页 | 输入SPU号发起更新 |
| 创建修图任务 | 表单页 | 发起更新 → 确认 | 页面跳转 | 选择图片并填写修图说明 |
| 上传图片/视频 | 表单页 | 列表页 → 点击「上传图片」 | 页面跳转 | 上传更新后的图片/视频 |
| 审核更新结果 | 表单页 | 列表页 → 点击「审核」 | 页面跳转 | 审核更新内容，通过/不通过 |
| 上传图片 | 表单页 | (待补充) | 弹窗 | 批量拖入文件夹上传图片 |
| 编辑图片 | 表单页 | (待补充) | 弹窗 | 调整图片尺寸/比例 |
| 选择图片 | 表单页 | (待补充) | 弹窗 | 选择已有图片 |

---

## 3. 权限说明

_[TODO: 请补充权限码信息]_

---

## 4. 状态机

### 任务状态

| 状态码 | 名称 | 说明 |
|-------|------|------|
| `0` | 待处理 | 任务创建后等待上传 |
| `10` | 待审核 | 已上传更新内容，等待审核 |
| `20` | 待返修 | 审核不通过，需重新上传 |
| `30` | 已完成 | 审核通过，更新完成 |
| `50` | 已取消 | 任务被取消（已上传内容保留） |

```mermaid
stateDiagram-v2
    [*] --> 待处理 : 创建任务
    待处理 --> 待审核 : 上传完成
    待审核 --> 已完成 : 审核通过
    待审核 --> 待返修 : 审核不通过
    待返修 --> 待审核 : 重新上传
    待处理 --> 已取消 : 取消任务
    待审核 --> 已取消 : 取消任务
    待返修 --> 已取消 : 取消任务
```

---

## 5. 数据模型

| 实体 | 字段名 | 类型 | 必填 | 默认值 | 说明 |
|------|--------|------|------|--------|------|
| 图片更新任务 | 任务编号 | string | 是 | 自动生成 | 任务唯一标识 |
| 图片更新任务 | 关联SPU | reference | 是 | - | 关联款式管理SPU |
| 图片更新任务 | 任务类型 | enum | 是 | 图片 | 图片/视频 |
| 图片更新任务 | 任务状态 | enum | 是 | 待处理 | 见状态机定义 |
| 图片更新任务 | 修图备注 | text | 否 | - | 修图需求描述，最大500字 |
| 图片更新任务 | 店铺 (v2.4.1 新增) | reference | 否 | - | 关联店铺，取SPU对应店铺 |
| 图片更新任务 | 创建人 | string | 是 | 当前用户 | 任务创建者 |
| 图片更新任务 | 创建时间 | datetime | 是 | 当前时间 | 任务创建时间 |
| 图片更新任务 | 处理人 | string | 否 | - | 最后处理人 |
| 图片更新任务 | 处理时间 | datetime | 否 | - | 最后处理时间 |
| ✨ 图片更新任务 | 加急 (v2.7.1 新增) | boolean | 否 | false | 是否加急；创建时由设计师填写，默认不加急 |

---

## 6. 图片更新任务列表

### 页面说明

**入口**: 设计中心 → 图片更新任务

**列表行为**: 默认按创建时间降序，分页展示

### 查询条件

| 条件名称 | 输入方式 | 说明 |
|---------|---------|------|
| 任务状态 (v2.4.1 变更) | 多选框组 | 支持同时选择多种状态，显示各状态数量：全部/待处理(n)/待审核(n)/待返修(n)/已完成(n)/已取消(n) |
| 店铺 (v2.4.1 新增) | 多选框组，支持搜索 | 按店铺筛选任务，取任务关联SPU所属店铺 |
| ✨ 加急 (v2.7.1 新增) | 单选 | 全部 / 仅加急 |
| 只看自己 | 开关 | 仅查看当前用户创建的任务 |

### 显示字段

| 字段名称 | 显示为 | 说明 |
|---------|--------|------|
| 任务信息 | 文本 + 标签 | 任务编号 + 任务类型（图片/视频）+ ✨ 加急标签（v2.7.1 新增，仅加急任务显示红色「加急」标签） |
| 关联款式 | 文本 | SPU编码 + 设计组 + 设计师 |
| 店铺名称 (v2.4.1 新增) | 文本 | 任务关联款式所属店铺 |
| 状态 | 状态标签 | 待处理/待审核/待返修/已完成/已取消 |
| 修图备注 | 文本 | 修图需求描述 |
| 创建信息 | 格式化文本 | 创建人 + 创建时间 |
| 处理信息 | 格式化文本 | 处理人 + 处理时间 |
| 操作 | 操作按钮 | 上传图片/审核/取消/下载图片 |

### 用例

**用例1：创建任务**
- **前置条件**：需要有权限
- **操作**：点击按钮，新标签页打开「发起图片/视频更新」页面
- **后置输出**：打开新标签页

**用例2：上传图片**
- **前置条件**：1）需要有权限；2）至少选中一条数据；3）仅任务状态=待处理/待返修可操作
- **操作**：点击后跳转「上传图片/视频」页面
- **后置输出**：进入上传页面

**用例3：下载图片**
- **前置条件**：1）需要有权限；2）选中且仅选中一条数据
- **操作**：下载款式对应的营销图、备注图、更新结果、修图需求说明（.txt）
- **后置输出**：下载 .zip 压缩包（多个款式以文件夹隔离）

**用例4：审核任务 (v2.4.1 变更)**
- **前置条件**：1）需要有权限；2）至少选中一条数据；3）仅任务状态=待审核可操作；4）仅创建人或SPU对应的SKC设计师可操作
- **操作**：点击后跳转「审核更新结果」页面
- **后置输出**：进入审核页面

**用例5：取消任务**
- **前置条件**：1）需要有权限；2）至少选中一条数据；3）仅任务状态=待处理/待审核/待返修可操作；4）仅创建人可操作
- **操作**：点击后出现二次确认弹窗，提示："确认取消所选图片/视频更新任务？"
- **后置输出**：确认后设置任务状态=已取消（已上传的内容保留）

**用例6：查看审核不通过原因**
- **前置条件**：1）需要有权限；2）至少选中一条数据；3）仅任务状态=待返修可操作
- **操作**：点击查看不通过原因及图片

### 异常处理

| 异常场景 | 用户看到的表现 |
|---------|-------------|
| 取消任务状态不匹配 | 按钮不显示或 disabled |
| 审核任务非创建人且非SPU对应SKC设计师 (v2.4.1 变更) | 按钮不显示 |
| 无权限 | 对应按钮不显示 |

---

## 7. 发起图片/视频更新

### 页面说明

**入口**: 图片更新任务列表 → 点击「创建任务」

**交互形式**: 新标签页

### 表单字段

| 字段名称 | 输入方式 | 必填 | 说明 |
|---------|---------|------|------|
| SPU编号 | 文本输入 | 是 | 支持批量输入，确认时查询款式管理及现货管理 |
| 任务类型 | 单选 | 是 | 默认选中「图片」。可选：图片/视频 |
| ✨ 加急 (v2.7.1 新增) | 开关 | 否 | 默认关闭；开启后任务列表显示「加急」标签 |

### 业务规则

1. 输入SPU号，确认时查询款式管理及现货管理
2. 校验款式是否存在，全部存在则跳转至创建任务页
3. 如存在不存在的款式，提示："款式不存在"

### 异常处理

| 异常场景 | 用户看到的表现 |
|---------|-------------|
| SPU不存在 | 提示"款式不存在" |

---

## 8. 创建修图任务

### 页面说明

**入口**: 发起图片/视频更新 → 确认后跳转

### 业务规则

1. 左侧显示已选中的款式信息，点击切换款式，加载对应的营销图
2. 勾选对应图片，出现修图需求说明+编号
3. 支持上传修图说明图片，每个输入框可输入一张图
4. 提交时校验：至少需要输入一个修图说明
5. 修图说明最大输入 500 字
6. 如当前选中的款式已有进行中的任务，不允许再提交

---

## 9. 上传图片/视频

### 页面说明

**入口**: 图片更新任务列表 → 点击「上传图片」

### 业务规则

1. 支持粘贴、拖放图片进行上传
2. 左侧显示已选中的款式信息，点击切换款式，加载对应的营销图、更新结果
3. 任务类型=图片：需要上传 1-10 张图片
4. 任务类型=视频：需要上传 1 个视频，最大 50MB
5. 支持点击保留按钮，将当前图片添加至更新内容，更新内容最大支持 10 张图或 1 个视频
6. 提交更新后将覆盖当前图片

### 上传图片（批量拖入文件夹）

1. 图片类型（单选）：商品图 / try on图
2. 匹配方式（单选）：SPU编号 / 供应商款号
   - 勾选供应商款号时，显示「请选择供应商」
   - 勾选SPU编号时，不显示「请选择供应商」
3. 供应商（单选选择器，支持搜索，必填）：取匹配现货SPU关联的全部供应商名称
4. 拖入文件夹校验：
   - 存在未勾选的必填字段 → 提示"请先勾选必填的信息"
   - 文件种类非文件夹 → 提示"请勿拖入非文件夹文件"
   - 文件夹为空 → 自动过滤不处理
5. 拖入后返回匹配结果列表：
   - 匹配方式=SPU编号 → 根据「文件夹名称」匹配 SPU，全量覆盖更新
   - 匹配方式=供应商款号 → 根据「文件夹名称+供应商名称」匹配 SPU，全量覆盖更新

---

## 10. 审核更新结果

### 页面说明

**入口**: 图片更新任务列表 → 点击「审核」

### 业务规则

1. 左侧显示已选中的款式信息，点击切换款式，加载营销图和更新结果
2. 支持点击保留按钮，将当前图片添加至更新内容
3. 更新内容最大支持 10 张图或 1 个视频
4. 审核通过：更新完成
5. 审核不通过：需要输入返修说明，最大支持 500 字；支持上传图片，最多一张
6. (v2.4.1 变更) 创建图片更新任务时设计师取SPU维度，该SPU对应的SKC设计师允许操作审核

---

## 更新记录

| 关联版本 | 更新内容 | 具体说明 |
|------|------|------|
| v2.4.1 | 状态筛选多选+店铺筛选与显示+审核权限放宽+数据模型新增店铺 | 来自规划文档 v2.4.1：图片更新任务优化——任务状态筛选改为多选框组(支持同时查看多种状态)、新增店铺多选筛选及列表显示字段、审核任务允许创建人或SPU对应的SKC设计师操作(创建任务时设计师取SPU维度)、数据模型新增店铺引用字段(可选) |
| v2.7.1 | 加急标签支持 | (v2.7.1 新增) 创建任务时支持设置加急（开关，默认关闭）；列表对加急任务展示红色「加急」标签；支持按加急筛选；数据模型新增 is_urgent 布尔字段 |
